# ast-sgrep

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  manifest  package-lock.json  package.json
.agents/skills/beads/: SKILL.md
.beads/: issues.jsonl
.cargo/: config.toml
.github/workflows/: bakeoff.yml  ci.yml  install-smoke.yml  pi-cross-smoke.yml  pi-native-artifacts.yml  pi-npm-release.yml  publish.yml  speed.yml
benchmarks/: README.md  perf-budgets.json
benchmarks/results/: bakeoff.md  baselines.md  head-to-head.md  losses.md  speed.md
benchmarks/studies/: intent-confusion.md  prevented-read.md
crates/ast-sgrep-cli/: Cargo.toml
crates/ast-sgrep-cli/src/: agent.rs  eval.rs  lib.rs  main.rs  supervisor.rs
crates/ast-sgrep-cli/tests/: cli_e2e.rs  cli_smoke.rs  machine_contracts.rs  plugin_formats.rs  surface_equivalence.rs  watch_incremental.rs
crates/ast-sgrep-cli/tests/fixtures/: capabilities.json  envelopes.json  machine_shapes.json
crates/ast-sgrep-core/: Cargo.toml
crates/ast-sgrep-core/benches/: search.rs
crates/ast-sgrep-core/src/: bench_suite.rs  chain.rs  fts.rs  gitignore.rs  index.rs  intent.rs  learned_fusion.rs  lib.rs  output.rs  pattern.rs  pipeline_parts.rs  query.rs  rank.rs  search.rs  semantic_ann.rs  semantic_chunk.rs  semantic_ivf.rs  skip.rs  tantivy_index.rs  text.rs
crates/ast-sgrep-core/src/gitignore/: glob.rs  mod.rs  rules.rs
crates/ast-sgrep-core/src/index/: file.rs  indexer.rs  mod.rs  types.rs
crates/ast-sgrep-core/src/pattern/: mod.rs  parse.rs  runner.rs
crates/ast-sgrep-core/src/query/: grammar.rs
crates/ast-sgrep-core/src/search/: hits.rs  mod.rs  types.rs
crates/ast-sgrep-core/src/search/passes/: bmh.rs  embed.rs  lexical.rs  literal.rs  mod.rs  modes.rs  regex.rs  symbol.rs
crates/ast-sgrep-core/src/semantic_ann/: index.rs  ivf.rs  kmeans.rs  mod.rs  session.rs  vector.rs
crates/ast-sgrep-core/src/store/: embed_support.rs  mod.rs  pragmas.rs  read.rs  rows.rs  schema.rs  sql.rs  sqlite.rs  upsert.rs
crates/ast-sgrep-core/tests/: e2e.rs  hardening.rs  index.rs  integration.rs  ivf_persist.rs  parity.rs  pattern_bench.rs  properties.proptest-regressions  rank_golden.rs  scale.rs  search.rs  semantic.rs  semantic_ann_locality.rs  semantic_ivf_roundtrip.rs  smoke.rs  store_delete.rs  store_pragmas.rs  sub1ms.rs
crates/ast-sgrep-core/tests/common/: mod.rs
crates/ast-sgrep-embed/: Cargo.toml
crates/ast-sgrep-embed/examples/: bench_neural.rs
crates/ast-sgrep-embed/src/: cloud.rs  embedder.rs  lib.rs  math.rs  neural.rs  ollama.rs  provider.rs  remote.rs  rerank.rs  semantic.rs
crates/ast-sgrep-lang/: Cargo.toml
crates/ast-sgrep-lang/src/: csharp.rs  extract.rs  go.rs  java.rs  langs.rs  lib.rs  pattern.rs  python.rs  ruby.rs  rust.rs  typescript.rs
crates/ast-sgrep-lang/tests/: extract.rs  extraction.rs  extraction_goldens.rs  false_positives.rs  new_languages.rs  pattern.rs
crates/ast-sgrep-lang/tests/fixtures/extract/: csharp.cs  go.go  java.java  javascript.js  python.py  ruby.rb  rust.rs  typescript.ts
crates/ast-sgrep-lsp/: Cargo.toml  README.md
crates/ast-sgrep-lsp/src/: backend.rs  convert.rs  lib.rs  main.rs  server.rs  settings.rs  support.rs  symbols.rs  text_edit.rs  transport.rs  types.rs  uri.rs
crates/ast-sgrep-lsp/tests/: lsp.rs
crates/ast-sgrep-mcp/: Cargo.toml
crates/ast-sgrep-mcp/src/: lib.rs  main.rs
crates/ast-sgrep-mcp/tests/: protocol.rs
crates/ast-sgrep-plugins/: Cargo.toml
crates/ast-sgrep-plugins/src/: agent.rs  github.rs  gitlab.rs  lib.rs
crates/ast-sgrep-plugins/tests/: capsule_format.rs
crates/ast-sgrep-testkit/: Cargo.toml
crates/ast-sgrep-testkit/src/: cli.rs  fixture.rs  hit.rs  index.rs  lang.rs  lib.rs  lsp.rs  plugins.rs  ranking.rs  repo.rs  search.rs
docs/: ARCHITECTURE.md  PERF_INVENTORY.md  QUERY_GRAMMAR.md  README.md  RELEASING.md  agent.md  architecture.md  benchmarks.md  comparison.md  getting-started.md  how-it-works.md  lsp.md  mcp.md  pi-package.md  plugins.md  publishing.md  semantic-search.md  testing.md  use-cases.md
editors/vscode/: .vscodeignore  README.md  package-lock.json  package.json
editors/vscode/src/: extension.ts
fuzz/: Cargo.toml
fuzz/corpus/query_grammar/: clauses  legacy  pattern  quoted
fuzz/fuzz_targets/: parsed_query.rs  query_grammar.rs  rank.rs
packaging/homebrew/: ast-sgrep.rb
passes/pass-04/evidence/: lang_pattern_case_policy.json
scripts/: check-error-budget.py  check-perf-budgets.py  cpu-limit-exec.py  publish.sh  rustc-capped  test_cpu_limit_exec.py
scripts/tests/: test_check_error_budget.py
tests/fixtures/ranking/: cases.json
tests/fixtures/sample/src/: Main.java  Program.cs  app.rb  app.ts  lib.ts  main.go  main.py  main.rs
