[workspace]
resolver = "2"
members = [
    "crates/ast-sgrep-core",
    "crates/ast-sgrep-cli",
    "crates/ast-sgrep-lang",
    "crates/ast-sgrep-embed",
]
default-members = ["crates/ast-sgrep-cli"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ast-sgrep/ast-sgrep"
authors = ["ast-sgrep contributors"]

[workspace.dependencies]
anyhow = "1"
blake3 = "=1.5.5"
clap = { version = "=4.5.23", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "=3.14.0"
thiserror = "2"
criterion = "=0.5.1"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
walkdir = "2"
