[package]
name = "ast-sgrep-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ast-sgrep-core = { path = "../crates/ast-sgrep-core" }

[[bin]]
name = "parsed_query"
path = "fuzz_targets/parsed_query.rs"
test = false
doc = false
bench = false

[[bin]]
name = "query_grammar"
path = "fuzz_targets/query_grammar.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rank"
path = "fuzz_targets/rank.rs"
test = false
doc = false
bench = false
