[package]
name = "ast-sgrep-cli"
description = "CLI for ast-sgrep hybrid code search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["cli", "code-search", "asgrep"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/ast-sgrep-cli"

[features]
default = []
cloud-embed = ["ast-sgrep-core/cloud-embed"]

[[bin]]
name = "asgrep"
path = "src/main.rs"

[[bin]]
name = "ast-sgrep"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ast-sgrep-core = { path = "../ast-sgrep-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
