[package]
name = "ast-sgrep-cli"
description = "CLI for ast-sgrep hybrid code search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["cli", "code-search", "asgrep"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/ast-sgrep-cli"

[features]
default = ["cloud-embed"]
cloud-embed = ["ast-sgrep-core/cloud-embed"]

[lib]
name = "ast_sgrep_cli"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
ast-sgrep-core = { path = "../ast-sgrep-core" }
ast-sgrep-plugins = { path = "../ast-sgrep-plugins" }
clap.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
ast-sgrep-testkit = { path = "../ast-sgrep-testkit" }
serde_json.workspace = true
tempfile.workspace = true
