[package]
name = "ast-sgrep-core"
description = "Core indexing and hybrid search engine for ast-sgrep"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["code-search", "call-graph", "sqlite", "hybrid-search"]
categories = ["development-tools"]
documentation = "https://docs.rs/ast-sgrep-core"

[features]
default = ["cloud-embed"]
cloud-embed = ["ast-sgrep-embed/cloud"]

[dependencies]
ast-sgrep-embed = { path = "../ast-sgrep-embed" }
anyhow.workspace = true
ast-sgrep-lang = { path = "../ast-sgrep-lang" }
blake3.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
criterion = "=0.5.1"
tempfile.workspace = true

[[bench]]
name = "search"
harness = false
