[package]
name = "ast-sgrep-embed"
description = "Offline and cloud embedding plugins for ast-sgrep"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["embedding", "code-search", "semantic-search"]
categories = ["development-tools"]
documentation = "https://docs.rs/ast-sgrep-embed"

[features]
default = ["local"]
local = []
cloud = ["ureq", "idna"]

[dependencies]
blake3.workspace = true
idna = { workspace = true, optional = true }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
simsimd.workspace = true
ureq = { workspace = true, optional = true }
