[package]
name = "ast-sgrep-embed"
description = "Offline and cloud embedding plugins for ast-sgrep"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["embedding", "code-search", "semantic-search"]
categories = ["development-tools"]
documentation = "https://docs.rs/ast-sgrep-embed"

[lints]
workspace = true

[features]
default = ["local"]
local = []
# HTTP clients hollowed; feature flag retained for API compatibility.
cloud = []
neural-embed = ["dep:fastembed", "dep:ort"]
rerank = ["dep:fastembed"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
rayon.workspace = true
simsimd.workspace = true
fastembed = { version = "5", optional = true, default-features = false, features = [
    "ort-download-binaries-rustls-tls",
    "hf-hub-rustls-tls",
] }
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false, features = [
    "coreml",
] }

[[example]]
name = "bench_neural"
required-features = ["neural-embed"]
