[package]
name = "ast-sgrep-lang"
description = "Polyglot tree-sitter parsers and symbol extractors for ast-sgrep"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["ast", "tree-sitter", "code-search", "polyglot"]
categories = ["development-tools", "parsing"]
documentation = "https://docs.rs/ast-sgrep-lang"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java = "0.23"
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-ruby = "0.23"
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-c-sharp = "0.23"

[dev-dependencies]
ast-sgrep-testkit = { path = "../ast-sgrep-testkit" }
