[package]
name = "ast-sgrep-mcp"
description = "Model Context Protocol server for ast-sgrep hybrid code search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["mcp", "code-search", "agent"]
categories = ["development-tools"]
publish = true

[lints]
workspace = true

[[bin]]
name = "asgrep-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ast-sgrep-core = { path = "../ast-sgrep-core", version = "1.0.0-alpha" }
ast-sgrep-plugins = { path = "../ast-sgrep-plugins", version = "1.0.0-alpha" }
serde.workspace = true
serde_json.workspace = true
